node-minify to node-minify-z

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-minify",
+  "name": "node-minify-z",
   "description": "Monorepo for node-minify",
   "homepage": "https://github.com/srod/node-minify",
   "author": {
